--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1684,107 +1684,107 @@ stories:
   domain: http://www.dentonrc.com/
   link: https://dentonrc.com/opinion/editorials/why-is-lowering-drug-costs-a-partisan-issue/article_c3ffb780-5b8d-532d-888e-909258aad7c4.html
 images:
-- name: server-cloud-server-racks-clouds-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-neo-instinct.jpg
-- name: catacombs-catacombs-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-clean-view.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-- name: oldhousecars-house-old-cars-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
-- name: subway-subway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
-- name: 35201856153_61bc075e4b-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
-- name: copper-circuit-waterfall-southern-oregon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-waterfall-southern-oregon.jpg
-- name: server-cloud-server-racks-door-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dry-skin.jpg
-- name: old-door-lock-old-door-lock-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kandinsky-bv.jpg
-- name: bordercrossing-bordercrossing-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
-- name: stalin-time-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-1.jpg
-- name: la-muse-miami-beach-tower-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-miami-beach-tower-city.jpg
-- name: copper-circuit-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-clouds-green-lawn.jpg
-- name: crow_oily_mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_oily_mcoilface.jpg
-- name: fence-mexico-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
-- name: server-cloud-server-racks-clouds-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-atari-asteroids.jpg
-- name: server-cloud-server-racks-door-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dali-two.jpg
-- name: dc-statue-dcstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
-- name: old-barn-old-barn-1500-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-pond.jpg
-- name: file-00-00-18-35.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35.jpg
-- name: docks-docks-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
-- name: blossombar-crafty-painting-file-00-00-50-25.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
-- name: bluelake-creativity-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-01-17-38.jpg
-- name: server-cloud-server-racks-door-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-dali.jpg
-- name: aws-s3-stories-beachclouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beachclouds-clean-view.jpg
-- name: stories-white-man-burning-down.jpg-large
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg-large
-- name: aws-s3-tunnel-tunnel-purp-paper-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
-- name: locked-up-steam-lock-up-steam-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colored-circuits.jpg
-- name: old-school-house-old-schoolhouse-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit.jpg
-- name: walled-garden-walled-garden-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-rainbow-festival.jpg
-- name: status-berlin-status-berlin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kandinsky-bv.jpg
-- name: berlinwall2-berlinwall-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colorful-dream.jpg
+- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
 - name: old-church-oldchurch-blue-circuit.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-circuit.jpg
-- name: fence-fence-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-clean-view.jpg
-- name: berlinwall2-berlinwall-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gan-vogh.jpg
-- name: lincoln-memorial-lincolnmemorial-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dry-skin.jpg
-- name: dragon-desert-desert-dragon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sand-paper.jpg
-- name: ellis-island-ellis-island-room-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-paper.jpg
-- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
-- name: flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-- name: berlinwall2-berlinwall-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
-- name: downtown-los-angeles-downtown-la-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
-- name: dc-statue-dcstatue-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-dream.jpg
-- name: meadowbutterfly-meadow-butterfly-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-oily-mcoilface.jpg
-- name: subway-subway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
-- name: yosemite-yosemite-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-umberto-bocc.jpg
-- name: trucksilo-trucksilo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
-- name: copper-circuit-old-gas-station_35891228584_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_35891228584_o.jpg
-- name: braceros-domingo-ulloa-trail-bridge-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-trail-bridge-walking.jpg
-- name: white-house-whitehouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-asteroids.jpg
+- name: old-church-oldchurch-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-nazi-poster.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dry-skin.jpg
+- name: castle-wall-DSC-0067-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alberto-giacometti.JPG
+- name: nyc-flag-nycflag-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-paper.jpg
+- name: window-window-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-deep-connections.jpg
+- name: old-door-lock-old-door-lock-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-hot-spicy.jpg
+- name: copper-circuit-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0033.jpg
+- name: la-muse-clowns_35893926114_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-clowns_35893926114_o.jpg
+- name: trucksilo-trucksilo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
+- name: razorcliff-razorcliff-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-satan-red.jpg
+- name: amusement-park-amusement-park-2-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-post-modern.jpg
+- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
+- name: paris-paris-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
+- name: capital-battle-capitolbattle-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-emily-carr.jpg
+- name: paris-paris-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kandinsky-bv.jpg
+- name: berlinwall-DSC-0084-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-rainbow-festival.jpg
+- name: hollywood-building-hollywood-building-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
+- name: store-on-corner-oldcabin-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-paper.jpg
+- name: old-church-oldchurch-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gred-mash.jpg
+- name: lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+- name: braceros-domingo-ulloa-walking-water-front-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-walking-water-front-sun.jpg
+- name: catacombs-catacombs-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-copper-circuit.jpg
+- name: trucksilo-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
+- name: oldroad-old-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-umberto-bocc.jpg
+- name: copper-circuit-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fishing-ship-in-docks.jpg
+- name: old-barn-old-barn-1500-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-marcel-duchamp.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
+- name: beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
+- name: status-berlin-status-berlin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit.jpg
+- name: white-house-lawn-white-house-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-hot-spicy.jpg
+- name: legal-statue-legalstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-circuit.jpg
+- name: file-00-01-19-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-01-19-48.jpg
+- name: wind-mills-windmills-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-light-dali.jpg
+- name: crow-crow-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crabapple.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
+- name: beach-rocks-beach-rocks-currents-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crafty-painting.jpg
+- name: cyber-api-description-wars-ellisisland-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-ellisisland-nazi-poster.jpg
+- name: adam-smith-adam-smith-feed-people.pxm
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-feed-people.pxm
+- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+- name: oldcabin-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
+- name: oldcabin-store-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smoking-cigarette.jpg
+- name: subway-subway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-rain.jpg
+- name: walled-garden-walled-garden-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
+- name: yuma-bank-yuma-bak-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
+- name: mistywoods-babyfoot-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-creativity.jpg
+- name: old-church-oldchurch-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-constitution.jpg
 ---
 Sales Team Realtors Gives Back With Annual Toy Giveaway.&nbsp;Caroling In Shain Park.&nbsp;Hounds Tame Cedar Shoals To Advance To Quarterfinals.&nbsp;Harvey Family Tradition Continues.&nbsp;Times Square Characters Head To Rock Center For The Holidays.&nbsp;Banksy Recreates The Nativity In Bethlehem.&nbsp;Chanukah Celebration Set For Sunday.&nbsp;Lake Havasu City Baseball Coach Dies After Suffering Heart Attack.&nbsp;
